# MyShell

./: CMakeLists.txt  README.md  Shell.cpp  Shell.h  appsettings.xml  create_installer.nsi  main.cpp
commands/: commands_include.h  ls.h
commands/src/: cal.cpp  echo.cpp  ls.cpp  tac.cpp
struct/: SharedData.cpp  SharedData.h
test/: CMakeLists.txt
test/ArchiveZipWorkerTest/: ArchiveZipWorkerTest.cpp  test_other_format_archive.7z
test/XmlConfigWorkerTest/: XmlConfigWorkerTest.cpp  testsettings.xml
utils/: ArchiveZipWorker.cpp  ArchiveZipWorker.h  Logger.cpp  Logger.h  UtilsMini.cpp  UtilsMini.h  XmlConfigWorker.cpp  XmlConfigWorker.h  XmlWorker.cpp  XmlWorker.h
